--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Depends:
     R (>= 2.15.1)
 Imports:
     XML,
-    XML2R
+    XML2R (>= 0.0.4)
 Date: 2014-01-13
 BugReports: http://github.com/cpsievert/bbXML2R/issues
