--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Depends:
     R (>= 2.15.1)
 Imports:
     XML,
-    XML2R (>= 0.0.4)
+    XML2R (>= 0.0.4),
+    stringr,
+    dplyr
 Date: 2014-01-13
 BugReports: http://github.com/cpsievert/bbXML2R/issues
