Add support for exporting to database

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1
 Author: Carson Sievert <sievert@iastate.edu>
 Maintainer: Carson Sievert <sievert@iastate.edu>
 Description: Tools for collecting basketball data from nba.com and wnba.com
-License: GPL (>=2)
+License: MIT + file LICENSE
 Depends:
     R (>= 2.15.1)
 Imports:
@@ -12,5 +12,9 @@ Imports:
     XML2R (>= 0.0.4),
     stringr,
     dplyr
+Suggests:
+    DBI,
+    RSQLite,
+    RSQLite.extfuns
 Date: 2014-01-13
-BugReports: http://github.com/cpsievert/bbXML2R/issues
+BugReports: http://github.com/cpsievert/bbscrapeR/issues
