--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
+  - ./travis-tool.sh r_binary_install httr
   - ./travis-tool.sh install_deps
 
 script: ./travis-tool.sh run_tests
