--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ notifications:
     on_failure: change
 env:
   global:
-  - secure: KATyUL1QlYryaeAWCwBEY4Bh0hcHNWb+8ydG1r1j0Vs/qoDips0Q9WCipOT3iEuBKgW3zSb+AGPh503rJf1jJzew+9hyiKJAZqyPmgycy251Wc1lKPOlEEjSPZ4ArNLCc/x1lGTWEf+SiM1XZeKnAlAWtLU85iXX1FJSBsdjLLI=
+  - secure: "KATyUL1QlYryaeAWCwBEY4Bh0hcHNWb+8ydG1r1j0Vs/qoDips0Q9WCipOT3iEuBKgW3zSb+AGPh503rJf1jJzew+9hyiKJAZqyPmgycy251Wc1lKPOlEEjSPZ4ArNLCc/x1lGTWEf+SiM1XZeKnAlAWtLU85iXX1FJSBsdjLLI="
