--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: r
+# needed for examples
+r_packages:
+  - knitr
+  - ggplot2
+  - rmarkdown
 before_script:
 - chmod 755 ./.push_gh_pages.sh
 script:
