--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bbscrapeR
 Title: Tools for collecting basketball data from nba.com and wnba.com
-Version: 0.3
+Version: 0.4
 Authors@R: c(person("Max", "Marchi", role = "ctb"), person("Carson", "Sievert",
     email = "sievert@iastate.edu", role = c("aut", "cre")))
 Maintainer: Carson Sievert <sievert@iastate.edu>
@@ -13,7 +13,8 @@ Imports:
     XML2R (>= 0.0.4),
     jsonlite,
     stringr,
-    plyr
+    plyr,
+    rvest
 Suggests:
     DBI,
     dplyr,
